XP-4101 Implement new form item type - OptionSet * Fixed incorrect checkbox alignment due to latest changes

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/form/form-item-set-occurrence-view.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/form/form-item-set-occurrence-view.less
@@ -22,7 +22,7 @@
     }
 
     .help-text-toggler {
-      margin-top: 2px;
+      margin-top: 3px;
     }
   }
 
